--- a/client/app/admin/fields/blocks.html
+++ b/client/app/admin/fields/blocks.html
@@ -19,3 +19,8 @@
     </button>
   </div>
 </div>
+
+    <div style="position: relative; float: left; margin-top: 15px; margin-right: 15px;" ng-repeat="block in bloques">
+      <img src="../storage/images/{{block.image}}" height="100" alt=""/>
+    </div>
+
