--- a/client/app/admin/index.html
+++ b/client/app/admin/index.html
@@ -10,6 +10,8 @@
   <div ui-view></div>
 
   <script src="node_modules/ng-admin/build/ng-admin.min.js"></script>
+  <script src="angular-resource.js"></script>
+  <script src="lb-services.js"></script>
   <script src="node_modules/angular-ui-tinymce/src/tinymce.js"></script>
   <script src="node_modules/tinymce-dist/tinymce.js"></script>
   <script src="admin.js"></script>
