--- a/client/app/index.html
+++ b/client/app/index.html
@@ -128,6 +128,7 @@
       </div>
     </div>
     <div class="w-section seccinter1">
+
       <img src="storage/images/{{fajas[0].image}}" alt=""/>
     </div>
   </div>
@@ -139,71 +140,22 @@
         <div class="w-row">
           <div class="w-col w-col-4 copromos">
             <div class="subtitpromo">Línea nueva y cambio de terminal (DNI)</div>
-            <div class="divpromos"><img class="imgpromo" src="assets/images/motorola_e.png"><img class="img4g" src="assets/images/4g.png" ng-show="destacados[0].cuatroG">
-              <div class="titpromo">{{destacados[0].marca}}
-                <br>{{destacados[0].name}}</div>
+            <div class="divpromos" ng-repeat="uno in destacados_dni">
+              <img class="imgpromo" src="storage/images/{{uno.image}}"><img class="img4g" src="assets/images/4g.png" ng-show="uno.cuatroG">
+              <div class="titpromo">{{uno.marca}}
+                <br>{{uno.name}}</div>
               <div class="w-clearfix divpromo">
-                <div class="divpromo1">{{destacados[0].price_dni}}</div>
-                <div class="divpromo2">
-                  <div class="bock2">
-                    <div class="textpromonegrita">SMS ilimitados</div>
-                    <div class="textpromonegritagde">2 GB internet</div>
-                  </div>
+                <div class="divpromo1">{{uno.price_dni}}</div>
+                <div class="divpromo2" bg="{{uno.cuadro_1}}">
                 </div>
-                <div class="divpromo3">
-                  <div class="blockpromo">
-                    <div class="textpromonegrita">Llamadas free lineas
-                      <br>&nbsp;Personal</div>
-                    <div class="textpromonegrita">$100
-                      <br>crédito llamadas otras
-                      <br>&nbsp;compañías</div>
-                  </div>
+                <div class="divpromo3" bg="{{uno.cuadro_2}}">
+
                 </div>
-                <div class="divpromo4">
-                  <div class="textpromocomun">Plan</div>
-                  <div class="textpromonegrita">Conexión</div>
-                  <div class="textpromonegrita">Total</div>
-                  <div class="textpromocomun">Control M</div>
+                <div class="divpromo4" bg="{{uno.cuadro_3}}">
+
                 </div>
-                <div class="divpromo5">
-                  <div class="textpromochica"></div>
-                  <div class="textpromonegritagde">$250</div>
-                  <div class="textpromochica">FINAL&nbsp;</div>
-                  <div class="textpromonegritagde"></div>
-                </div>
-              </div>
-            </div>
-            <div class="divpromos"><img class="imgpromo" src="assets/images/samsung-galaxy-core-prime copia.png">
-              <div class="titpromo">Samsung Core
-                <br>Prime</div>
-              <div class="w-clearfix divpromo">
-                <div class="divpromo1">$2199</div>
-                <div class="divpromo2">
-                  <div class="bock2">
-                    <div class="textpromonegrita">SMS ilimitados</div>
-                    <div class="textpromonegritagde">2 GB internet</div>
-                  </div>
-                </div>
-                <div class="divpromo3">
-                  <div class="blockpromo">
-                    <div class="textpromonegrita">Llamadas free lineas
-                      <br>&nbsp;Personal</div>
-                    <div class="textpromonegrita">$100
-                      <br> crédito llamadas otras
-                      <br>&nbsp;compañías</div>
-                  </div>
-                </div>
-                <div class="divpromo4">
-                  <div class="textpromocomun">Plan</div>
-                  <div class="textpromonegrita">Conexión</div>
-                  <div class="textpromonegrita">Total</div>
-                  <div class="textpromocomun">Control M</div>
-                </div>
-                <div class="divpromo5">
-                  <div class="textpromochica">PAGAS X MES</div>
-                  <div class="textpromonegritagde">$250</div>
-                  <div class="textpromochica">FINAL</div>
-                  <div class="textpromonegritagde"></div>
+                <div class="divpromo5" bg="{{uno.cuadro_4}}">
+
                 </div>
               </div>
             </div>
@@ -211,151 +163,44 @@
           <div class="w-col w-col-4 copromos">
             <div class="subtitpromo">Traé tu línea
               <br> a&nbsp;&nbsp;Personal&nbsp;</div>
-            <div class="divpromos"><img class="imgpromo" src="assets/images/lg-leon copia.png">
-              <div class="titpromo">LG 340
-                <br>León</div>
+            <div class="divpromos" ng-repeat="uno in destacados_veni">
+              <img class="imgpromo" src="storage/images/{{uno.image}}"><img class="img4g" src="assets/images/4g.png" ng-show="uno.cuatroG">
+              <div class="titpromo">{{uno.marca}}
+                <br>{{uno.name}}</div>
               <div class="w-clearfix divpromo">
-                <div class="divpromo1">$2294</div>
-                <div class="divpromo2">
-                  <div class="bock2">
-                    <div class="textpromonegrita">INTERNET</div>
-                    <div class="textpromonegritagde">incluído
-                      <br>x
-                      <br>mes</div>
-                  </div>
+                <div class="divpromo1">{{uno.price_dni}}</div>
+                <div class="divpromo2" bg="{{uno.cuadro_1}}">
                 </div>
-                <div class="divpromo3">
-                  <div class="blockpromo">
-                    <div class="textpromochica">LLAMA Y
-                      <br>MENSAJEA TODO
-                      <br>LO QUE QUIERAS
-                      <br>A CUALQUIER
-                      <br>PERSONAL</div>
-                    <div class="textpromonegritagde">$5,90
-                      <br>x
-                      <br>día</div>
-                  </div>
+                <div class="divpromo3" bg="{{uno.cuadro_2}}">
+
                 </div>
-                <div class="divpromo4">
-                  <div class="textpromocomun">PlanAbono</div>
-                  <div class="textpromonegrita">DíaFull</div>
-                  <div class="textpromonegrita">$250</div>
-                  <div class="textpromocomun">a Personal</div>
+                <div class="divpromo4" bg="{{uno.cuadro_3}}">
+
                 </div>
-                <div class="divpromo5">
-                  <div class="textpromochica">PAGAS X MES</div>
-                  <div class="textpromonegritagde">$245</div>
-                  <div class="textpromochica">TENES DE CREDITO X MES</div>
-                  <div class="textpromonegritagde">$245</div>
-                </div>
-              </div>
-              <div class="divpromos"><img class="imgpromo" src="assets/images/nokia-lumia-735 copia.png">
-                <div class="titpromo">Nokia Lumia
-                  <br>735 Lte&nbsp;</div>
-                <div class="w-clearfix divpromo">
-                  <div class="divpromo1">$3229</div>
-                  <div class="divpromo2">
-                    <div class="bock2">
-                      <div class="textpromonegrita">INTERNET</div>
-                      <div class="textpromonegritagde">incluído
-                        <br>x
-                        <br>mes</div>
-                    </div>
-                  </div>
-                  <div class="divpromo3">
-                    <div class="blockpromo">
-                      <div class="textpromochica">LLAMA Y
-                        <br>MENSAJEA TODO
-                        <br>LO QUE QUIERAS
-                        <br>A CUALQUIER
-                        <br>PERSONAL</div>
-                      <div class="textpromonegritagde">$5,90
-                        <br>x
-                        <br>día</div>
-                    </div>
-                  </div>
-                  <div class="divpromo4">
-                    <div class="textpromocomun">PlanAbono</div>
-                    <div class="textpromonegrita">DíaFull</div>
-                    <div class="textpromonegrita">$250</div>
-                    <div class="textpromocomun">a Personal</div>
-                  </div>
-                  <div class="divpromo5">
-                    <div class="textpromochica">PAGAS X MES</div>
-                    <div class="textpromonegritagde">$245</div>
-                    <div class="textpromochica">TENES DE CREDITO X MES</div>
-                    <div class="textpromonegritagde">$245</div>
-                  </div>
+                <div class="divpromo5" bg="{{uno.cuadro_4}}">
+
                 </div>
               </div>
             </div>
           </div>
           <div class="w-col w-col-4 copromo">
             <div class="subtitpromo">Línea nueva y Cambio de terminal (CUIT)</div>
-            <div class="divpromos"><img class="imgpromo" src="assets/images/samsung-galaxy-a3 copia.png"><img class="img4g" src="assets/images/4g.png">
-              <div class="titpromo">Samsung galaxy
-                <br>A3</div>
+            <div class="divpromos" ng-repeat="uno in destacados_cuit">
+              <img class="imgpromo" src="storage/images/{{uno.image}}"><img class="img4g" src="assets/images/4g.png" ng-show="uno.cuatroG">
+              <div class="titpromo">{{uno.marca}}
+                <br>{{uno.name}}</div>
               <div class="w-clearfix divpromo">
-                <div class="divpromo1">$ 3883</div>
-                <div class="textiva">Precio + IVA</div>
-                <div class="divpromo2">
-                  <div class="bock2">
-                    <div class="textpromonegrita">SMS
-                      <br>&nbsp;ilimitados</div>
-                    <div class="textpromonegritagde">3 GB internet</div>
-                  </div>
+                <div class="divpromo1">{{uno.price_dni}}</div>
+                <div class="divpromo2" bg="{{uno.cuadro_1}}">
                 </div>
-                <div class="divpromo3">
-                  <div class="blockpromo">
-                    <div class="textpromonegrita">Llamadas free lineas
-                      <br>&nbsp;Personal</div>
-                    <div class="textpromonegrita">150 mins llamadas a otras compañias</div>
-                  </div>
+                <div class="divpromo3" bg="{{uno.cuadro_2}}">
+
                 </div>
-                <div class="divpromo4">
-                  <div class="textpromocomun">Negocios</div>
-                  <div class="textpromonegrita">Conexión</div>
-                  <div class="textpromonegrita">Total L</div>
-                  <div class="textpromocomun"></div>
+                <div class="divpromo4" bg="{{uno.cuadro_3}}">
+
                 </div>
-                <div class="divpromo5">
-                  <div class="textpromochica">PAGAS X MES</div>
-                  <div class="textpromonegritagde">$250</div>
-                  <div class="textpromochica">+ IMPUESTOS</div>
-                  <div class="textpromonegritagde"></div>
-                </div>
-              </div>
-            </div>
-            <div class="divpromos"><img class="imgpromo" src="assets/images/lg-l30 copia.png">
-              <div class="titpromo">Alcatel One Touch C1</div>
-              <div class="w-clearfix divpromo">
-                <div class="divpromo1">$1156</div>
-                <div class="textiva">Precio + IVA</div>
-                <div class="divpromo2">
-                  <div class="bock2">
-                    <div class="textpromonegrita">SMS
-                      <br>&nbsp;ilimitados</div>
-                    <div class="textpromonegritagde">3 GB internet</div>
-                  </div>
-                </div>
-                <div class="divpromo3">
-                  <div class="blockpromo">
-                    <div class="textpromonegrita">Llamadas free lineas
-                      <br>&nbsp;Personal</div>
-                    <div class="textpromonegrita">150 mins llamadas a otras compañias</div>
-                  </div>
-                </div>
-                <div class="divpromo4">
-                  <div class="textpromocomun">Negocios</div>
-                  <div class="textpromonegrita">Conexión</div>
-                  <div class="textpromonegrita">Total L</div>
-                  <div class="textpromocomun"></div>
-                </div>
-                <div class="divpromo5">
-                  <div class="textpromochica">PAGAS X MES</div>
-                  <div class="textpromonegritagde">$250</div>
-                  <div class="textpromochica">+IMPUESTOS</div>
-                  <div class="textpromonegritagde"></div>
+                <div class="divpromo5" bg="{{uno.cuadro_4}}">
+
                 </div>
               </div>
             </div>
@@ -447,6 +292,20 @@
   <script src="destel.js"></script>
   <script src="services/lb-services.js"></script>
   <script src="controllers/HomeController.js"></script>
+  <script>
+    angular.module('Destel')
+      .directive('bg', function() {
+        return {
+          restrict: 'A',
+          link: function(scope, tElem, tAttrs) {
+            var imageUrl = tAttrs.bg;
+            console.log(imageUrl);
+            tElem.css('background-image', "url('../storage/images/" + imageUrl + "')");
+            console.log(77, tElem.css('background-image'));
+          }
+        }
+      });
+  </script>
 
 
 </body>
