--- a/client/app/admin/fields/fileUpload.html
+++ b/client/app/admin/fields/fileUpload.html
@@ -14,7 +14,7 @@
     <button
       type="button"
       class="btn btn-success btn-s"
-      ng-click="addBlock()">
+      ng-click="upload()">
       <span class="glyphicon glyphicon-upload"></span> Subir
     </button>
   </div>
